Try add selenide

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>4.12.3</version>
+        </dependency>
+
 
     </dependencies>
 
